--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,9 @@
     <%= favicon_tag 'images/favicon.png' %>
   </head>
   <body>
-    <%= yield %>
+
+  <%= partial "layouts/navbar" %>
+  <%= yield %>
+  <%= partial "layouts/footer" %>
   </body>
 </html>
